<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="appName">Praise Beer</string>
<string name="scanBeer">Scan Beer</string>
<string name="quitApp">Quit</string>
<string name="scanContent">Scanned UPC Value: </string>


<string name="noDataEntered">No data was entered to search on...</string>
<string name="scanResults">Scan Results</string>

<string name="searchingEllipsis">Searching...</string>
<string name="viewStylePage">View Beer Style Page</string>
<string name="viewProfilePage">View Full Beer Rating Page</string>
<string name="fixExistingEntry">Sorry that wasn\'t the beer you scanned. If you\'d like, you can modify the name we have on file and we\'ll take another crack at it. Maybe be more descriptive than the last guy, unless of course it was you who entered it. In that case, great job! :)</string>
<string name="beerNameLabel">Name of beer</string>
<string name="submit">Submit</string>
<string name="cancel">Cancel</string>
<string name="beerNameEntryDescription">(Please be as descriptive as possible. Include the name of the brewery as well. For example: &quot;New Belgium Brewing Fat Tire Ale&quot;)</string>



<string name="upcCodeNotFound">UPC Code Not Found</string>
<string name="error_noBarCodeRecieved">Sorry, there must have been some error. No UPC code was recieved after the scan.</string>
<string name="error_requestFailure">Sorry, the UPC lookup seemed to fail. Either the request couldn\'t be sent (do you have service?) or the server didn\'t respond correctly. Please try again later.</string>
<string name="error_invalidJsonResponse">Sorry, the server responded with something unexpected. Please try again later.</string>
<string name="error_invalidUpcCode">Error, invalid UPC code scanned.</string>
<string name="error_noUpcCodeSent">Sorry, there was an error sending the UPC code to the lookup server. Please try again.</string>
<string name="error_requestTimeout">Sorry, the lookup timed out. We must be getting slammed with people looking for beer. Please try again in a little bit.</string>
<string name="errorOccured">An Error Has Occured</string>
<string name="pleaseWaitEllipsis">Please Wait...</string>
<string name="searchingForResults">Searching For Results</string>

<string name="pleaseFillOutDescription">Please fill out a beer description</string>
<string name="okLabel">OK</string>
<string name="error_noDescription">Sorry, there was a problem sending that description to the server.</string>
<string name="incorrectBeer">Not the beer you scanned?</string>
<string name="beerAdvocateAttribution">Beer ratings courtesy of beeradvocate.com</string>
<string name="noUpcResultsFound">Sorry, we weren\'t able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
<string name="fixExistingEntryTitle">Edit Existing Entry</string>
<string name="noBeerFoundWithDescription">We found a name for that beer, but we couldn\'t seem to find any ratings for it. The name is entered below. If you tweak the description, we might be able to find the ratings for it.</string>
<string name="ratingsText">w/ %1$s reviews</string>

<string name="viewBreweryPage">View Other Beers by %1$s</string>
<string name="searchBeer">Search for Beer</string>
<string name="searchForBeer">Search For Beer</string>
<string name="enterSearchTerm">Enter the name of the beer. This usually works best if you enter the brewery that made it as well.</string>
<string name="searchResults">Search Results</string>
</resources>
