<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FillParentVertical"
    android:background="#ffffffff" android:layout_gravity="center_vertical">

    <ImageView
        style="@style/FillParentAll"
        android:src="@drawable/home" android:scaleType="fitStart"/>
           
    <Button
        android:id="@+id/scanBeer"
        android:text="@string/scanBeer"
        android:clickable="true"
        style="@style/HomeButton"
        />
        
    <Button
        android:id="@+id/searchBeer"
        android:text="@string/searchBeer"
        android:clickable="true"
        android:layout_marginTop="80dip"
        style="@style/HomeButton"
        />
        
    <Button
        android:id="@+id/quitApp"
        android:text="@string/quitApp" 
        android:clickable="true"
        android:layout_marginTop="160dip"
        style="@style/HomeButton"
        />
</FrameLayout>
